Add configuration files for welcome and greet services

--- a/greet-service-dev.properties
+++ b/greet-service-dev.properties
@@ -1,1 +1,4 @@
-
+# Greet Service DEV Configuration
+msg=Hello from Greet Service (DEV PROFILE)
+logging.level.com.example.greetservice=DEBUG
+spring.jpa.show-sql=true
