--- a/greet-service-prod.properties
+++ b/greet-service-prod.properties
@@ -1,1 +1,4 @@
-
+# Greet Service PROD Configuration
+msg=Hello from Greet Service (PROD PROFILE)
+logging.level.com.example.greetservice=INFO
+spring.jpa.show-sql=false
