--- a/greet-service.properties
+++ b/greet-service.properties
@@ -1,1 +1,15 @@
+# Greet Service Default Configuration
+# (Identity is set locally, but redundant here is fine)
+spring.application.name=greet-service
+server.port=9091
+msg=Hello from Default Greet Service (Config Server)
 
+# Database (MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/greetdb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Cache Config
+spring.cache.type=redis
