--- a/welcome-service.properties
+++ b/welcome-service.properties
@@ -1,1 +1,4 @@
-
+# Welcome Service Default Configuration
+spring.application.name=welcome-service
+server.port=8081
+welcome.msg=Default Welcome Message
