--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,19 @@
+# Global Configuration (Applied to all services)
 
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+# Zipkin Tracing
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+# Redis (Common)
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# Kafka (Common)
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Actuator Endpoints (Monitoring)
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
