--- a/application.properties
+++ b/application.properties
@@ -13,6 +13,10 @@ spring.data.redis.port=6379
 
 # Kafka (Common)
 spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 # Actuator Endpoints (Monitoring)
 management.endpoints.web.exposure.include=*
