--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,9 +1,21 @@
 server.port=8082
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-# Discovery Routing
+# Dynamic Routing
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-# Zipkin (Gateway should also trace)
+# Explicit Routes (More Reliable)
+spring.cloud.gateway.routes[0].id=welcome-route
+spring.cloud.gateway.routes[0].uri=lb://WELCOME-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/welcome-service/**
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[1].id=greet-route
+spring.cloud.gateway.routes[1].uri=lb://GREET-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/greet-service/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+
+# Zipkin
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
