--- a/application.properties
+++ b/application.properties
@@ -2,6 +2,7 @@
 
 # Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
 # Zipkin Tracing
 management.tracing.sampling.probability=1.0
