--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,4 +1,3 @@
-server.port=8082
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 # Dynamic Routing
@@ -19,3 +18,10 @@ spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
 # Zipkin
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+# Swagger UI Aggregation
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.urls[0].name=welcome-service
+springdoc.swagger-ui.urls[0].url=/welcome-service/v3/api-docs
+springdoc.swagger-ui.urls[1].name=greet-service
+springdoc.swagger-ui.urls[1].url=/greet-service/v3/api-docs
