--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -19,9 +19,12 @@ spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
-# Swagger UI Aggregation
+# Swagger UI Configuration
 springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.urls[0].name=welcome-service
-springdoc.swagger-ui.urls[0].url=/welcome-service/v3/api-docs
-springdoc.swagger-ui.urls[1].name=greet-service
-springdoc.swagger-ui.urls[1].url=/greet-service/v3/api-docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.urls[0].name=greet-service
+springdoc.swagger-ui.urls[0].url=/greet-service/v3/api-docs
+springdoc.swagger-ui.urls[1].name=welcome-service
+springdoc.swagger-ui.urls[1].url=/welcome-service/v3/api-docs
