--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -25,7 +25,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
-springdoc.swagger-ui.urls[0].name=greet-service
-springdoc.swagger-ui.urls[0].url=/greet-service/v3/api-docs
-springdoc.swagger-ui.urls[1].name=welcome-service
-springdoc.swagger-ui.urls[1].url=/welcome-service/v3/api-docs
+
+# Service API Documentation URLs
+springdoc.swagger-ui.urls[0].name=Welcome Service
+springdoc.swagger-ui.urls[0].url=/welcome-service/v3/api-docs
+springdoc.swagger-ui.urls[1].name=Greet Service
+springdoc.swagger-ui.urls[1].url=/greet-service/v3/api-docs
