--- a/welcome-service.properties
+++ b/welcome-service.properties
@@ -2,3 +2,4 @@
 spring.application.name=welcome-service
 server.port=8081
 welcome.msg=Default Welcome Message
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
