--- a/application.properties
+++ b/application.properties
@@ -13,7 +13,7 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
 # Kafka (Common)
-spring.kafka.bootstrap-servers=localhost:9092
+# spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
