--- a/greet-service.properties
+++ b/greet-service.properties
@@ -13,3 +13,9 @@ spring.jpa.show-sql=true
 
 # Cache Config
 spring.cache.type=redis
+
+
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.consumer.group-id=greet-group
+spring.kafka.consumer.auto-offset-reset=earliest
+
