--- a/welcome-service.properties
+++ b/welcome-service.properties
@@ -2,3 +2,6 @@
 spring.application.name=welcome-service
 server.port=8081
 welcome.msg=Default Welcome Message
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.consumer.group-id=welcome-group
+spring.kafka.consumer.auto-offset-reset=earliest
