--- a/welcome-service.properties
+++ b/welcome-service.properties
@@ -1,7 +1,11 @@
-# Welcome Service Default Configuration
+# ================= APP =================
 spring.application.name=welcome-service
 server.port=8081
+
+# ================= BUSINESS =================
 welcome.msg=Default Welcome Message
+
+# ================= KAFKA =================
 spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=welcome-group
 spring.kafka.consumer.auto-offset-reset=earliest
