--- a/application.properties
+++ b/application.properties
@@ -1,24 +1,21 @@
-# Global Configuration (Applied to all services)
-
-# Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+# ================= EUREKA =================
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
-# Zipkin Tracing
+# ================= ZIPKIN =================
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 
-# Redis (Common)
-spring.data.redis.host=localhost
+# ================= REDIS =================
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 
-# Kafka (Common)
-# spring.kafka.bootstrap-servers=localhost:9092
+# ================= KAFKA (COMMON SERIALIZERS) =================
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-# Actuator Endpoints (Monitoring)
+# ================= ACTUATOR =================
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
