Update configuration files for microservices, including Eureka, Zipkin, Redis, and Kafka settings

--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -15,10 +15,9 @@ spring.cloud.gateway.routes[1].id=greet-route
 spring.cloud.gateway.routes[1].uri=lb://GREET-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/greet-service/**
 spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
-
 # Zipkin
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
 # Swagger UI Configuration
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -31,3 +30,4 @@ springdoc.swagger-ui.urls[0].name=Welcome Service
 springdoc.swagger-ui.urls[0].url=/welcome-service/v3/api-docs
 springdoc.swagger-ui.urls[1].name=Greet Service
 springdoc.swagger-ui.urls[1].url=/greet-service/v3/api-docs
+
