--- a/greet-service-prod.properties
+++ b/greet-service-prod.properties
@@ -1,4 +1,12 @@
 # Greet Service PROD Configuration
+server.port=9091
+
 msg=Hello from Greet Service (PROD PROFILE)
 logging.level.com.example.greetservice=INFO
-spring.jpa.show-sql=false
+
+# Database (MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/greetdb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
