--- a/welcome-service-prod.properties
+++ b/welcome-service-prod.properties
@@ -1,3 +1,5 @@
 # Welcome Service PROD Configuration
+spring.application.name=welcome-service
+server.port=8081
 welcome.msg=Welcome Message (PROD)
 logging.level.root=INFO
