--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,1 +1,22 @@
+# ================= EUREKA =================
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
+# ================= ZIPKIN =================
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+
+# ================= REDIS =================
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+
+# ================= KAFKA (COMMON SERIALIZERS) =================
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# ================= ACTUATOR =================
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
