--- a/application.properties
+++ b/application.properties
@@ -1,16 +1,17 @@
 # ================= EUREKA =================
-eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 # ================= ZIPKIN =================
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
 # ================= REDIS =================
-spring.data.redis.host=redis
+spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
 # ================= KAFKA (COMMON SERIALIZERS) =================
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
